# phosh-plugin-hello-world

./: README.md  meson.build
src/: hello-world.c  hello-world.desktop.in.in  hello-world.h  hello-world.ui  meson.build  phosh-plugin-hello-world-version.h.in  phosh-plugin-hello-world.c  phosh-plugin-hello-world.gresources.xml  phosh-plugin-hello-world.h
src/stylesheet/: common.css
